# tsserver-client-python

./: README.md  example_usage.py  pyproject.toml
tsserver_client/: __init__.py  client.py  comm.py  config.py
